BUG:293247

Properly escape special characters in file names.

Also, fix a bug in label positions coming out of 'maximize plot' mode.


git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1282831 283d02a7-25f6-0310-bc7c-ecb5cbfe19da